kubernetes/tekton/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: galactica.local
    http:
      paths:
        - path: /tekton(/|$)(.*)
          backend:
            serviceName: tekton-dashboard
            servicePort: 9097
